# Vector-Store_copiertemplate

./: .gitignore  Dockerfile  Readme.md  copier.yaml  docker-compose.yml  main.py  pyproject.toml  vector_store.py
app/: main.py  utils.py
{{project_name}}/: Dockerfile  README.md  docker-compose.yml
{{project_name}}/app/: api.py  db.py  models.py  vector_store.py
