[project]
name = "vector-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "numpy>=2.2.6",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.11.11",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
